<resources>
    <string name="app_name">CouresManger</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="firstname">firstname</string>
    <string name="secondname">secondname</string>
    <string name="email">E_Mail</string>
    <string name="usernamee">username</string>
    <string name="passwardd">password</string>
    <string name="input_cv">cv</string>
    <string name="web_client_id">656046429106-b9hdl4rmmu38a040r3k747h933eqmigd.apps.googleusercontent.com</string>
    <string name="browse">browser</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_activit_detail_course">ActivitDetailCourse</string>
    <string name="title_activity_chatting">Chatting</string>
    <string name="title_activity_chating_Activity">ChatingActiviy</string>
    <string name="appwidget_text">My cources</string>
    <string name="add_widget">Add widget</string>
    <string name="username">Username</string>
    <string name="Remember">Remember Me</string>
    <string name="signin">SIGNIN</string>
    <string name="or">OR</string>
    <string name="signup">SIGNUP</string>
    <string name="namedeatail">Name:</string>
    <string name="instractordetail">Instractor:</string>
    <string name="pricedeatil">Price:</string>
    <string name="timedetail">time line:</string>
    <string name="inputchat">Input</string>
    <string name="signvertcal">Signin</string>
    <string name="signupvetical">Signup</string>
    <string name="data">data</string>
    <string name="icon"><![CDATA[-->]]></string>
    <string name="ii">:</string>
    <string name="status">Status Login</string>
    <string name="enroll">this course</string>
    <string name="enrolll">Enroll</string>
    <string name="dt_coure_img">image detail</string>
    <string name="lodinphoto">Login photo</string>
    <string name="imglog">logim image</string>
    <string name="chatbtn">Chat button</string>
    <string name="logophoto">logo image</string>
    <string name="imglogin">Login img</string>
    <string name="signphoto">sign photo</string>
    <string name="account">now you have account</string>
    <string name="error">please check username and passward</string>
    <string name="errorlogin">username , passward invaild or failed in internet</string>
    <string name="exitapp">Are you sure to exit app\"</string>
    <string name="errorusername">plz enter your username</string>
    <string name="errorpassward">plz enter your passward</string>
    <string name="errorfirstname">plz enter first name</string>
    <string name="errorlastname">plz enter last  name</string>
    <string name="erroremail">plz enter  Email</string>
    <string name="erroroccured">eerror occured</string>
    <string name="titletoolbar">Course Detail</string>
    <string name="authenticationfailed">Authentication Failed</string>
    <string name="exit">ok</string>
    <string name="cancel">cancel</string>
    <string name="checkintrernat">plz check your internet</string>
</resources>
