<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cources.example.com.couresmanger.LoginNdSignup.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/signphoto"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_people" />

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTrans"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llSignin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimaryTrans"
            android:orientation="horizontal"
            app:layout_widthPercent="85%"
            android:layout_alignParentStart="true">

            <cources.example.com.couresmanger.VerticalTextView
                android:id="@+id/tvSigninInvoker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="@string/signvertcal"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:visibility="gone" />

            <include
                android:id="@+id/llSigninContent"
                layout="@layout/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSignup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/colorAccentTrans"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_widthPercent="15%"
            android:layout_alignParentEnd="true">

            <cources.example.com.couresmanger.VerticalTextView
                android:id="@+id/tvSignupInvoker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="@string/signupvetical"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:visibility="visible" />

            <include
                android:id="@+id/llSignupContent"
                layout="@layout/content_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />
        </LinearLayout>
    </android.support.percent.PercentRelativeLayout>
</RelativeLayout>
